--- a/box_bringup/bringup_alphasense/core_research/config/ncamera_settings_1hz.yaml
+++ b/box_bringup/bringup_alphasense/core_research/config/ncamera_settings_1hz.yaml
@@ -65,12 +65,12 @@ ncamera:
   max_ptp_sync_lost_time_s: 3600
 
   # Number of enabled cameras and individual camera configuration.
-  num_cams: 6                       # 1 - 8
+  num_cams: 5                     # 1 - 8
   cams:
     0: *standard_camera_config      # Front left, used for stereo
     1: *camera_1_config             # Front right, used for stereo
-    2: *standard_camera_config      # No camera
-    3: *standard_camera_config      # Side left
-    4: *standard_camera_config      # Front middle
-    5: *standard_camera_config      # Side right
-#    6: *standard_camera_config     # Back
+    2: *standard_camera_config      # Left
+    3: *standard_camera_config      # Front middle
+    4: *standard_camera_config      # Right
+#    5: *standard_camera_config
+#    6: *standard_camera_config
