--- a/box_bringup/box_launch/launch/launch_nuc/package.xml
+++ b/box_bringup/box_launch/launch/launch_nuc/package.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>launch_jetson</name>
+  <name>launch_nuc</name>
   <version>1.0.0</version>
-  <description>RSL's launch_jetson package.</description>
+  <description>RSL's launch_nuc package.</description>
   <license>Proprietary</license>
   <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
   <author email="jonfrey@ethz.ch">Jonas Frey</author>
   <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>bringup_alphasense</depend>
-  <depend>bringup_hesai</depend>
   <depend>bringup_hdr</depend>
   <depend>bringup_imu</depend>
   <depend>bringup_livox</depend>
-  <depend>bringup_totalstation</depend>
   <depend>bringup_gps</depend>
   <depend>bringup_adis16475</depend>
   <depend>bringup_stim320</depend>
