--- a/box_drivers/anymal_msgs/CMakeLists.txt
+++ b/box_drivers/anymal_msgs/CMakeLists.txt
@@ -11,6 +11,11 @@ find_package(catkin REQUIRED COMPONENTS
 
 add_message_files(
   FILES
+  SeActuatorReadings.msg
+  SeActuatorReading.msg
+  SeActuatorState.msg
+  SeActuatorCommand.msg
+  BatteryState.msg
   AnymalState.msg
   Command.msg
   Contact.msg
