--- a/box_utils/box_auto/package.xml
+++ b/box_utils/box_auto/package.xml
@@ -35,6 +35,8 @@
   <depend>anymal_msgs</depend>
   <depend>gnss_msgs</depend>
   <depend>any_velodyne_pointcloud</depend>
+  <depend>pointcloud_undistortion</depend>
+  
   
   <!-- To disable 3rd party application building. Set export DEBUG_MODE=1 -->
   <depend condition="$DEBUG_MODE != 1">direct_lidar_inertial_odometry</depend>
