--- a/box_utils/box_auto/cfg/boxi_imu_processor.yaml
+++ b/box_utils/box_auto/cfg/boxi_imu_processor.yaml
@@ -7,13 +7,15 @@ stim:
       - "/gt_box/stim320/gyroscope_temperature"
       
 # Optionally can process other IMUs
-# adis:
-#   max_time_difference_millisecond: 5.2 # Millisecond
-#   topics:
-#     - "/gt_box/adis16475_node/imu"
-# livox:
-#     max_time_difference_millisecond: 5.2 # Millisecond
-#     topics:
-#       - "/gt_box/livox/imu"
-#       - "/gt_box/livox/imu_si_compliant"
-#       - "/gt_box/livox/lidar"
+adis:
+  max_time_difference_millisecond: 5.2 # Millisecond
+  topics:
+    # - "/gt_box/adis16475_node/imu"
+    - ""
+livox:
+    max_time_difference_millisecond: 5.2 # Millisecond
+    topics:
+    - ""
+      # - "/gt_box/livox/imu"
+      # - "/gt_box/livox/imu_si_compliant"
+      # - "/gt_box/livox/lidar"
