--- a/box_utils/box_converter/huggingface-dataset-conversion/configs/2024-11-11-12-42-47.yaml
+++ b/box_utils/box_converter/huggingface-dataset-conversion/configs/2024-11-11-12-42-47.yaml
@@ -141,13 +141,14 @@ data:
       format: png
       compressed: false
 
-  actuator_readings_topics:
-    - alias: anymal_lpc_readings
-      file: "{}_lpc_general.bag"
-      topic: "/anymal_low_level_controller/actuator_readings"
-      actuator_names:
-        - foo
-        - bar
+#TODO: add actuator readings
+  # actuator_readings_topics:
+  #   - alias: anymal_lpc_readings
+  #     file: "{}_lpc_general.bag"
+  #     topic: "/anymal_low_level_controller/actuator_readings"
+  #     actuator_names:
+  #       - foo
+  #       - bar
 
   lidar_topics:
     - alias: hesai
